delete(context/monetary): remove `Category` and `Tag` artifacts along with related repositories and services
- Deleted unused `Category` and `Tag` domain models, events, commands, repositories, and services.
- Removed associated persistence logic, including JDBC repositories and their queries.
- Cleaned up tests and auxiliary files related to the removed artifacts.